--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/manage.py",
-            "args": ["seed"],
+            "args": ["runserver"],
             "django": true,
             "autoReload":{
                 "enable": true
